heroku already caches

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
     %title
       = controller.action_name.titleize
       = controller.controller_name.titleize
-    = stylesheet_link_tag 'scaffold', 'application', :cache => 'base'
-    = javascript_include_tag 'application', :cache => true
+    = stylesheet_link_tag 'scaffold', 'application'
+    = javascript_include_tag 'application'
   %body
     = yield
