--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -1,4 +1,11 @@
-=render :partial => 'buses'
-=render :partial => 'drivers'
-=render :partial => 'taxis'
-=render :partial => 'trains'
+=render :partial => 'header'
+%ul
+  %li
+    =render :partial => 'buses'
+  %li
+    =render :partial => 'drivers'
+  %li
+    =render :partial => 'taxis'
+  %li
+    =render :partial => 'trains'
+=render :partial => 'footer'
