Corrected migration mistake

--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -7,6 +7,8 @@
     %th
       Author
     %th
+      Bus Company
+    %th
       Bus Number
     %th
       Bus Info
@@ -24,6 +26,8 @@
         =h comment.type
       %td
         =h comment.author
+      %td
+        =h comment.transport.company
       %td
         =h comment.vehicle_driver_number
       %td
