--- a/app/views/comments/_trains.haml
+++ b/app/views/comments/_trains.haml
@@ -9,7 +9,7 @@
     %th
       Train Line
     %th
-      Train Description
+      Train Direction
     %th
       Ramble
     / %th
@@ -25,9 +25,9 @@
       %td
         =h comment.author
       %td
-        =h comment.train_line
+        =h comment.train_line.name
       %td
-        =h comment.train_direction
+        =h comment.direction.name
       %td
         =h comment.ramble
       / %td
