--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,6 @@
       = controller.action_name.titleize
       = controller.controller_name.titleize
     = stylesheet_link_tag 'scaffold', 'application'
-    = javascript_include_tag 'application'
+    = javascript_include_tag 'jquery-1.4.2.min.js', 'application'
   %body
     = yield
