--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -1,11 +1,15 @@
 =render :partial => 'header'
-%ul
-  %li
-    =render :partial => 'buses'
-  %li
-    =render :partial => 'drivers'
-  %li
-    =render :partial => 'taxis'
-  %li
-    =render :partial => 'trains'
+#feeds
+  %ul
+    %li
+      =render :partial => 'buses'
+    %li
+      "TEST"
+      /=render :partial => 'drivers'
+    %li
+      "TEST"
+      /=render :partial => 'taxis'
+    %li
+      "TEST"
+      /=render :partial => 'trains'
 =render :partial => 'footer'
