--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,23 +16,78 @@ p, h1, form, button{border:0; margin:0; padding:0;}
 }
 
 /* ----------- feeds ----------- */
-#feeds ul {
-  min-width:500px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  text-align: center;
-  width: 90%;
+.container {
+  margin-left: auto;
+	margin-right: auto;
+	width: 960px;
+	display:inline;
 }
 
-#feeds ul li {
-  margin: 50;
-  display: inline;
-  border:solid 2px #b7ddf2;
+#feedBox{
+	border:solid 2px #b7ddf2;
 	background:#ebf4fb;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
-	width: 20%;
+}
+
+#feedBox h1 {
+	font-size:14px;
+	font-weight:bold;
+	margin-bottom:8px;
+}
+
+.feed_1 {
+	display:inline;
+	float: left;
+	//position: relative;
+	width:300px;
+	margin-left: 15px;
+	margin-right: 15px;  
+}
+.feed_2{
+  display:inline;
+	float: left;
+	//position: relative;
+	width:300px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+.feed_3{
+	display:inline;
+	float: left;
+	//position: relative;
+	width:300px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+/* ----------- Buttons ----------- */
+.group{
+  display:block;
+}
+a.button{
+background:url(../images/button.gif);
+display:block;
+color:#555555;
+font-weight:bold;
+height:30px;
+line-height:29px;
+margin-bottom:14px;
+text-decoration:none;
+width:90px;
+}
+a:hover.button{
+color:#0066CC;
+}
+.rant{
+background:url(../images/delete.gif) no-repeat 10px 8px;
+text-indent:30px;
+display:block;
+}
+.rave{
+background:url(../images/add.gif) no-repeat 10px 8px;
+text-indent:30px;
+display:block;
 }
 
 /* ----------- My Form ----------- */
