--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -1,8 +1,9 @@
 =render :partial => 'header'
 
-.grid_4=render :partial => 'buses'
-.grid_4=render :partial => 'ferries'
-.grid_4=render :partial => 'trains'
-.clear
+#container
+  #feed.grid_4=render :partial => 'buses'
+  #feed.grid_4=render :partial => 'trains'
+  #feed.grid_4=render :partial => 'trains'
+  .clear
 
 =render :partial => 'footer'
