--- a/app/views/comments/_ferries.haml
+++ b/app/views/comments/_ferries.haml
@@ -1,49 +1,27 @@
-Ferries
-%table
-  %tr
-    %th
-      Rant/Rave
-    %th
-      Author
-    %th
-      Ferry Line
-    %th
-      Ferry Direction
-    %th
-      Ramble
-    / %th
-    /   Longitude
-    / %th
-    /   Latitude
-    / %th
-    /   Ip address
-  - @trains.each do |comment|
-    %tr
-      %td
-        =h comment.type
-      %td
-        =h comment.author
-      %td
-        =h comment.train_line.name
-      %td
-        =h comment.direction.name
-      %td
-        =h comment.ramble
-      / %td
-      /   =h comment.longitude
-      / %td
-      /   =h comment.latitude
-      / %td
-      /   =h comment.ip_address
-      / %td
-      /   = link_to 'Show', comment
-      / %td
-      /   = link_to 'Edit', edit_comment_path(comment)
-      / %td
-      /   = link_to 'Destroy', comment, :confirm => 'Are you sure?', :method => :delete
-
-%br
-= link_to 'New Rant', new_rant_path(:category => Comment::TRAIN)
-|
-/ TODO: Inflection is causing this!
-= link_to 'New Rave', new_rafe_path(:category => Comment::TRAIN)
+.rectangle
+  %h2 Ferries
+.triangle-l
+.triangle-r
+.buttons
+  %span.ferry
+  %a.buttonRave{:href=>"raves/new?category=Ferry"}
+    %span.rave Rave
+  %a.buttonRant{:href=>"rants/new?category=Ferry"}
+    %span.rant Rant
+.info
+  - @ferries.each do |comment|
+    %h2
+      =h comment.transport_id
+    %p
+      - if comment.type == "rave"
+        %span.raveIcon
+      - else
+        %span.rantIcon
+      =h comment.ramble
+      %br
+      %span.footer
+        added by 
+        %span.author
+          =h comment.author
+        on 
+        =h comment.created_at
