--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -2,7 +2,7 @@
 
 #container
   #feed.grid_4=render :partial => 'buses'
-  #feed.grid_4=render :partial => 'trains'
+  #feed.grid_4=render :partial => 'ferries'
   #feed.grid_4=render :partial => 'trains'
   .clear
 
