* Render correct ramble css class

--- a/app/views/comments/_trains.haml
+++ b/app/views/comments/_trains.haml
@@ -17,7 +17,7 @@ Total Rants:
     %h2
       =h comment.train_line.name
     %p
-      - if comment.type == "rave"
+      - if comment.type == "Rave"
         %span.raveIcon
       - else
         %span.rantIcon
