--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -18,7 +18,7 @@ Total Rants:
     %h2
       =h comment.transport.company
     %p
-      - if comment.type == "rave"
+      - if comment.type == "Rave"
         %span.raveIcon
       - else
         %span.rantIcon
