Corrected search params for ramble counts

--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -1,7 +1,7 @@
 Total Raves:
-= @buses.type_equals('rave').count
+= @buses.type_equals('Rave').count
 Total Rants:
-= @buses.type_equals('rant').count
+= @buses.type_equals('Rant').count
 .rectangle
   %h2 Buses
 .triangle-l
