--- a/app/views/comments/_ferries.haml
+++ b/app/views/comments/_ferries.haml
@@ -1,7 +1,7 @@
 Total Raves:
-= @ferries.type_equals('rave').count
+= @ferries.type_equals('Rave').count
 Total Rants:
-= @ferries.type_equals('rant').count
+= @ferries.type_equals('Rant').count
 .rectangle
   %h2 Ferries
 .triangle-l
