--- a/app/views/comments/_trains.haml
+++ b/app/views/comments/_trains.haml
@@ -1,7 +1,7 @@
 Total Raves:
-= @trains.type_equals('rave').count
+= @trains.type_equals('Rave').count
 Total Rants:
-= @trains.type_equals('rant').count
+= @trains.type_equals('Rant').count
 .rectangle
   %h2 Trains
 .triangle-l
