--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -9,10 +9,17 @@ Total Rants:
 .buttons
   %span.bus
   %a.buttonRave{:href=>"raves/new?category=Bus"}
-    %span.rave Rave
+    %span.rave
+      Rave
+      (
+      = @buses.type_equals('Rave').count
+      )
   %a.buttonRant{:href=>"rants/new?category=Bus"}
-    %span.rant Rant
-
+    %span.rant
+      Rant
+      (
+      = @buses.type_equals('Rant').count
+      )
 .info
   - @buses.each do |comment|
     %h2
