--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -165,7 +165,7 @@ div#container {
 }
 
 .info h2 {
-	font-size: 20px;
+	font-size: 14px;
 }
 
 .info p {
@@ -177,6 +177,7 @@ div#container {
 .info p a {
 	color: #c4591e;
 	text-decoration: none;
+	display:inline;
 }
 
 .info p a:hover {
@@ -195,12 +196,14 @@ div#container {
 .rantIcon{
 background:url(../images/delete.gif) no-repeat 10px 8px;
 display:block;
+height:32px;
+width:32px;
 }
 .raveIcon{
 background:url(../images/add.gif) no-repeat 10px 8px;
 display:block;
-height:20px;
-width:20px;
+height:32px;
+width:32px;
 }
 
 /* ----------- Buttons ----------- */
@@ -289,7 +292,7 @@ display:block;
 }
 
 /* ----------- My Form ----------- */
-.myform{
+.addForm{
 	margin:0 auto;
 	width:400px;
 	padding:14px;
@@ -337,12 +340,20 @@ display:block;
 	width:200px;
 	margin:2px 0 20px 10px;
 }
+#stylized select{
+	float:left;
+	font-size:12px;
+	padding:4px 2px;
+	border:solid 1px #aacfe4;
+	width:200px;
+	margin:2px 0 20px 10px;
+}
 #stylized button{
 	clear:both;
 	margin-left:150px;
 	width:125px;
 	height:31px;
-	background:#666666 url(img/button.png) no-repeat;
+	background:#666666 url(../images/button.png) no-repeat;
 	text-align:center;
 	line-height:31px;
 	color:#FFFFFF;
