Mobile app development
* Added Info page
* Added Bus Rambles
* Added Ferry Rambles listing
* Added Train Rambles listing
* Prevent unauthorised access to lookup tables
* Added Raves and Rants
* Removed Rave/Rant format specific rendering (MIME types take care of this now)
* Apply js for mobile app

--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -1,7 +1,3 @@
-Total Raves:
-= @buses.type_equals('Rave').count
-Total Rants:
-= @buses.type_equals('Rant').count
 .rectangle
   %h2 Buses
 .triangle-l
@@ -10,16 +6,10 @@ Total Rants:
   %span.bus
   %a.buttonRave{:href=>"raves/new?category=Bus"}
     %span.rave
-      Rave
-      (
-      = @buses.type_equals('Rave').count
-      )
+      ==Rave(#{@buses.type_equals('Rave').count})
   %a.buttonRant{:href=>"rants/new?category=Bus"}
     %span.rant
-      Rant
-      (
-      = @buses.type_equals('Rant').count
-      )
+      ==Rant(#{@buses.type_equals('Rant').count})
 .info
   - @buses.each do |comment|
     %h2
