--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,8 @@
     %title
       = controller.action_name.titleize
       = controller.controller_name.titleize
-    = stylesheet_link_tag 'reset', '960', 'scaffold', 'application'
-    = javascript_include_tag 'jquery-1.4.2.min.js', 'application'
+    = stylesheet_link_tag 'reset', '960', 'scaffold', 'application' , 'facebox'
+    = javascript_include_tag 'jquery-1.4.2.min.js', 'application', 'facebox'
+
   %body
     = yield
